----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-22 Michal Cihar  <michal@cihar.com>
    * libraries/export/sql.php: Invalid SQL on empty table export (bug
      #939918).

2004-04-21 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.6.0-alpha1 released
    * (after the release) user_password.php: undefined offset in blowfish.php

2004-04-20 Alexander M. Turek  <me@derrabus.de>
    * Documentation.html, README:
      - The MySQL 4.1 support is not experimental anymore;
      - Updated credits.
    * server_privileges.php: Fixed an error that occured when trying to add
      privileges to non-existant tables.

2004-04-20 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/tbl_change.js: was always returning current day

2004-04-20 Michal Cihar  <michal@cihar.com>
    * libraries/tbl_change.js, css/phpmyadmin.css.php: Added time editing to
      calendar.
    
2004-04-19 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Clarification.
    * config.inc.php, Documentation.html, libraries/config_import.lib.php:
      Updated path to MySQL's searchable online documentation.
    * ChangeLog: Recoded to UTF-8.
    * server_privileges.php: Illegal mix of collations.
    * libraries/dbi/*.dbi.lib.php: Don't touch character_set_connection
      (bug #902414). This should fix many "Illegal mix of collations" errors.

2004-04-19 Marcel Tschopp  <ne0x@users.sourceforge.net>
    * libraries/export/sql.php, libraries/export/latex.php: Fixed a few
      mysqli-specific export-bugs
      
2004-04-19 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php: bug 780516: capitalizing keywords: we no longer
      put the formatted query into $sql_query, due to better pattern matching
 
2004-04-19 Michal Cihar  <michal@cihar.com>
    * libraries/tbl_change.js: Better return value formatting.
    * Documentation.html: Mentioned header and footer customization.

2004-04-18 Michal Cihar  <michal@cihar.com>