@@ -41,7 +41,8 @@ function PMA_strlen($string)
 {
     if (defined('PMA_MULTIBYTE_ENCODING')) {
         return mb_strlen($string);
-    } elseif($GLOBALS['PMA_has_mbstr']) {
+    // windows-* charsets are not multibyte and not supported by mb_*
+    } elseif($GLOBALS['PMA_has_mbstr'] && substr($GLOBALS['charset'],0,8) != 'windows-') {
         return mb_strlen($string, $GLOBALS['charset']);
     } else {
         return strlen($string);
@@ -65,7 +66,7 @@ function PMA_substr($string, $start, $length = 2147483647)
 {
     if (defined('PMA_MULTIBYTE_ENCODING')) {
         return mb_substr($string, $start, $length);
-    } elseif($GLOBALS['PMA_has_mbstr']) {
+    } elseif($GLOBALS['PMA_has_mbstr'] && substr($GLOBALS['charset'],0,8) != 'windows-') {
         return mb_substr($string, $start, $length, $GLOBALS['charset']);
     } else {
         return substr($string, $start, $length);
